--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -170,6 +170,11 @@
       {{ entry.note | strip }}
     </div>
 
+    <!-- TL;DR -->
+    <div class="tldr" style="color: lightgray;">
+      TL;DR: {{ entry.tldr }}
+    </div>
+
     <!-- Links/Buttons -->
     <div class="links">
       {% if entry.award %}
