--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -171,7 +171,7 @@
     </div>
 
     <!-- TL;DR -->
-    <div class="tldr" style="color: lightgray;">
+    <div class="tldr" style="color: gray;">
       TL;DR: {{ entry.tldr }}
     </div>
 
